--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,29 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.IVote"
         tools:targetApi="31">
         <activity
+            android:name=".VoteActivity"
+            android:exported="false"
+            android:label="@string/title_activity_vote"
+            android:theme="@style/Theme.IVote" />
+        <activity
+            android:name=".CreateVoteActivity"
+            android:exported="false"
+            android:label="@string/title_activity_create_vote"
+            android:theme="@style/Theme.IVote.NoActionBar" />
+        <activity
+            android:name=".VoteListActivity"
+            android:exported="false"
+            android:label="@string/title_activity_vote_list"
+            android:theme="@style/Theme.IVote" />
+        <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true"
-            android:label="@string/title_activity_login" >
-
+            android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,8 +41,8 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.IVote.NoActionBar"/>
-
+            android:theme="@style/Theme.IVote.NoActionBar">
+        </activity>
     </application>
 
 </manifest>
