--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
-    <!--Permissions for internet-->
+    <!-- Permissions for internet -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
 
     <application
         android:allowBackup="true"
@@ -18,6 +16,11 @@
         android:theme="@style/Theme.IVote"
         tools:targetApi="31">
         <activity
+            android:name=".JoinOrgActivity"
+            android:exported="false"
+            android:label="@string/title_activity_join_org"
+            android:theme="@style/Theme.IVote" />
+        <activity
             android:name=".VoteActivity"
             android:exported="false"
             android:label="@string/title_activity_vote"
@@ -28,7 +31,7 @@
             android:label="@string/title_activity_create_vote"
             android:theme="@style/Theme.IVote.NoActionBar" />
         <activity
-            android:name=".VoteListActivity"
+            android:name=".CreateOrganisationActivity"
             android:exported="false"
             android:label="@string/title_activity_vote_list"
             android:theme="@style/Theme.IVote" />
@@ -46,8 +49,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.IVote.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.IVote.NoActionBar" />
     </application>
 
 </manifest>
